2004-02-11  Emmanuel Beffara  <manu@beffara.org>

	* doc/...: Documentation updates.

	* configure, setup.py, rubber.spec.in, debian/rules: Added
	installation of the info documentation.

	* src/modules/expand.py: Don't expand local classes by default.

	* src/util.py, src/graphics/__init__.py: Made the rules for graphics
	conversion safer.

	* src/__init__.py, src/cmdline.py, src/cmd_info.py: Let the classes
	derive from "object".

2004-01-24  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py, src/modules/multibib.sty: Added support for
	package "multibib", patching the bibtex module in the process.

	* src/cmdline.py: Added the installation directory in "--version".

	* src/util.py: Added function simplify_path.

	* src/__init__.py, src/cmdline.py: Added an argument to env.command to
	indicate the position of directives in the sources.

2004-01-21  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/pdftex.py, src/modules/graphics.py: Added support for
	DVI generation by pdfTeX.

2004-01-20  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added a hook for \end{document}.

	* man/..., doc/..., setup.py, MANIFEST.in: Moved man pages into new
	directory doc. Introduced Texinfo documentation.

2004-01-17  Emmanuel Beffara  <manu@beffara.org>

	* src/cmdline.py, src/cmd_pipe.py, man/...: Added the command-line
	option "--texpath".

	* src/__init__.py, src/modules/expand.py: Fixed how 'expand' modifies
	the hooks dictionary.

2003-12-23  Emmanuel Beffara  <manu@beffara.org>

	* Makefile.in, man/...: Switched to proper hand-written man pages.

	* src/__init__.py, src/modules/expand.py: Added the 'expand' module.

2003-12-16  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Allowed backslashes in macro arguments.

2003-12-11  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py: Moved the standard Message class
	into the command-line part, improved GNU compliance.
